Primera prueba funcionamiento OK. WIP

--- a/roles/installlime/tasks/main.yml
+++ b/roles/installlime/tasks/main.yml
@@ -2,22 +2,29 @@
 # Instalación de LiME
 
 - name: Instalar git
-  debug:
-    msg: "Aquí se incluye la instalación de git"
+  import_role:
+    name: installgit
     
 - name: Clonar LiME
-  debug:
-    msg: "Aquí se clona el git de LiME"
+  git:
+    repo: https://github.com/504ensicsLabs/LiME.git
+    dest: "{{homedirectory}}/LiME"
     
-- name: Instalar las dependencias-make
-  debug:
-    msg: "Instalación de make"
+- name: Instalar dependencias (make y build-essential)
+  become: yes
+  apt:
+    pkg:
+      - make
+      - build-essential
+    state: present
     
-- name: Instalar las dependencias-build-essential
-  debug:
-    msg: "Instalación de build-essential"
+- name: Instalar dependencias (linux-headers)
+  become: yes
+  apt:
+    name: "linux-headers-{{ansible_facts.kernel}}"
+    state: present
     
-- name: Instalar las dependencias-linux-headers
-  debug:
-    msg: "Instalación de linux-headers"
-
+- name: Compilar LiME
+  shell:
+    chdir: "{{limedirectory}}"
+    cmd: make -C "/lib/modules/{{ansible_facts.kernel}}/build" M=$PWD
