--- a/inventories/group_vars/ubuntu.yml
+++ b/inventories/group_vars/ubuntu.yml
@@ -1,2 +1,7 @@
 ---
-homedirectory: "/home/david/"
+# Este fichero contiene las variables utilizadas en nodos Ubuntu
+homedirectory: "/home/david"
+limedirectory: "/home/david/LiME/src"
+memorydumppath: "/home/david/memDump.dd"
+storepath: "/home/david/memDump"
+extension: ".dd"
