--- a/site.yml
+++ b/site.yml
@@ -13,7 +13,7 @@
   
 #    - name: Mostrar ansible_facts
 #      debug:
-#        var: ansible_facts.date_time
+#        var: ansible_facts.user_id
 
     - name: Comprobar si LiME ya está instalado.
       import_role:
