--- a/roles/checklime/tasks/main.yml
+++ b/roles/checklime/tasks/main.yml
@@ -1,6 +1,7 @@
 ---
-# El rol existelime comprobará la existencia de LiME en el nodo.
-# Buscará el archivo lime.ko y en caso de no encontrarlo devolverá "0"
+# El rol checklime comprobará la existencia de LiME en el nodo.
+# Buscará el directorio LiME en el directorio home del usuario remoto 
+# y en caso de no encontrarlo devolverá "0"
 
 - name: Comprobar si LiME está instalado
   find:
