Segunda prueba. OK

--- a/inventories/group_vars/ubuntu.yml
+++ b/inventories/group_vars/ubuntu.yml
@@ -4,5 +4,5 @@ homedirectory: "/home/david"
 limedirectory: "/home/david/LiME/src"
 memorydumppath: "/home/david"
 memorydumpname: "memDump"
+memorydumpextension: ".dd"
 storagepath: "/home/david/evidencesStorage"
-extension: ".dd"
