--- a/inventories/group_vars/ubuntu.yml
+++ b/inventories/group_vars/ubuntu.yml
@@ -1,9 +1,9 @@
 ---
 # Definición de variables utilizadas para el grupo de nodos "ubuntu"
 
-homedirectory: "/home/david"
-limedirectory: "/home/david/LiME/src"
-memorydumppath: "/home/david"
+homedirectory: "/home/{{ansible_user}}"
+limedirectory: "{{homedirectory}}/LiME/src"
+memorydumppath: "{{homedirectory}}"
 memorydumpname: "memDump"
 memorydumpextension: ".dd"
-storagepath: "/home/david/evidencesStorage"
+storagepath: "{{homedirectory}}/evidencesStorage"
