Prueba 4 funcionando. OK

--- a/ansible.cfg
+++ b/ansible.cfg
@@ -81,9 +81,9 @@ inventory      = inventories
 
 # enable callback plugins, they can output to stdout but cannot be 'stdout' type.
 #callback_whitelist = timer, mail
-callback_whitelist = timer
+#callback_whitelist = timer
 #callback_whitelist = profile_roles
-#callback_whitelist = profile_tasks
+callback_whitelist = profile_tasks
 #callback_whitelist = profile_tasks, profile_roles, timer
 
 # Determine whether includes in tasks and handlers are "static" by
