--- a/site.yml
+++ b/site.yml
@@ -5,27 +5,23 @@
 # En caso de que LiME no esté presente en el nodo, preparará y realizará la instalación antes de realizar la adquisición.
 # La adquisición se realizará en remoto desde la máquina controladora y se almacenará en formato raw en un fichero .dd
 
-- name: Adquisición de memoria en nodos Ubuntu mediante LiME
+- name: Adquirir memoria en Ubuntu (LiME)
   hosts: ubuntu
   vars:
     memorydumpformat: raw
     ansible_user: "{{user}}"
     ansible_become_password: "{{becomepassword}}"
   tasks:
-  
-#    - name: Mostrar ansible_facts
-#      debug:
-#        var: ansible_facts.user_id
-
-    - name: Comprobar si LiME ya está instalado.
+ 
+    - name: Comprobar instalación de LiME
       import_role:
         name: checklime
         
-    - name: Instalar LiME en caso necesario.
+    - name: Instalar LiME
       include_role:
         name: installlime
-      when: encontrado=="0"
+      when: checklimeresult=="0"
 
-    - name: Ejecutar LiME y realizar la adquisición de memoria
+    - name: Ejecutar LiME
       import_role:
         name: dumpmemory
