--- a/roles/installgit/tasks/main.yml
+++ b/roles/installgit/tasks/main.yml
@@ -1,5 +1,5 @@
 ---
-# tasks file for installgit
+# El role installgit se encargará de la instalación de git en el nodo.
 
 - name: instalar git
   become: yes
