--- a/inventories/group_vars/ubuntu.yml
+++ b/inventories/group_vars/ubuntu.yml
@@ -6,4 +6,6 @@ limedirectory: "{{homedirectory}}/LiME/src"
 memorydumppath: "{{homedirectory}}"
 memorydumpname: "memDump"
 memorydumpextension: ".dd"
+fsevidencename: "fsInfo"
+fsevidenceextension: ".txt"
 storagepath: "{{homedirectory}}/evidencesStorage"
