--- a/inventories/hosts.yml
+++ b/inventories/hosts.yml
@@ -16,4 +16,9 @@ all:
         10.0.2.13:
         10.0.2.14:
         10.0.2.16:
+        10.0.2.18:
+    # Grupo de nodos con sistema operativo Windows
+    windows:
+      hosts:
+        10.0.2.17:
         10.0.2.15:
