--- a/roles/dumpmemorywindows/tasks/main.yml
+++ b/roles/dumpmemorywindows/tasks/main.yml
@@ -1,2 +1,38 @@
 ---
-# tasks file for dumpmemorywindows
+# El role dumpmemorywindows se encargará de la adquisición de memoria mediante la ejecución de winPMEM
+# Además, almacenará la evidencia adquirida utilizando la etiqueta que recibirá como parámetro
+# y calculará el valor hash que permitirá garantizar la integridad de la misma.
+
+
+- name: Crear directorio winPMEM
+  win_file:
+    path: "{{winpmempath}}"
+    state: directory
+
+- name: Copiar ejecutable winPMEM
+  win_copy:
+    src: winpmem.exe
+    dest: "{{winpmempath}}/winpmem.exe"
+        
+- name: Adquirir memoria
+  ansible.windows.win_powershell:
+    chdir: "{{winpmempath}}"
+    script: |
+      .\winpmem.exe "{{winpmempath}}/{{memorydumplabel}}"
+
+- name: Enviar adquisición de memoria al controlador
+  fetch:
+    become: false
+    flat: yes
+    src: "{{winpmempath}}/{{memorydumplabel}}"
+    dest: "{{completestoragepath}}/{{memorydumplabel}}"
+    
+- name: Eliminar la captura de memoria local
+  win_file:
+    path: "{{winpmempath}}/{{memorydumplabel}}"
+    state: absent
+        
+- name: Calcular hash de la adquisición de memoria
+  shell:
+    cmd: sha256sum "{{completestoragepath}}/{{memorydumplabel}}" > "{{completestoragepath}}/{{memorydumplabel}}".hash
+  delegate_to: localhost
