Funcionando en la prueba Windows con SSH

--- a/inventories/hosts.yml
+++ b/inventories/hosts.yml
@@ -10,15 +10,15 @@ all:
     # Grupo de nodos con sistema operativo Ubuntu
     ubuntu:
       hosts:
-        10.0.2.10:
-        10.0.2.11:
-        10.0.2.12:
-        10.0.2.13:
-        10.0.2.14:
-        10.0.2.16:
-        10.0.2.18:
+        10.0.2.10: #TFM_Nodo_01
+        10.0.2.11: #TFM_Nodo_02
+        10.0.2.12: #TFM_Nodo_03
+        10.0.2.13: #TFM_Nodo_04
+        10.0.2.14: #TFM_Nodo_05
+        10.0.2.16: #TFM_Nodo_06
+        10.0.2.18: #TFM_Nodo_07
     # Grupo de nodos con sistema operativo Windows
     windows:
       hosts:
-        #10.0.2.17:
-        10.0.2.15:
+        10.0.2.19: #TFM_Nodo_11
+        10.0.2.15: #TFM_Nodo_12
